# fraud_detection

./: .env  01-03-2026.ipynb  07_03_2026.ipynb  Dockerfile  PHASE3_DELIVERABLES_INDEX.py  PHASE3_QUICK_START.md  PHASE3_README.md  PHASE3_SUMMARY.md  baseline_model.pkl  capston_porject_dl.ipynb  capston_project_ml.ipynb  capston_project_phase_1.ipynb  capston_project_phase_3.ipynb  docker-compose.yml  final_model.pkl  k8s-deployment.yaml  langchain.ipynb  main.py  phase3_config.py  phase3_evidently_monitoring.py  phase3_fastapi_inference.py  phase3_mlflow_registration.py  phase3_notebook_generator.py  phase3_requirements.txt  phase3_setup.py  prometheus.yml  pyproject.toml  requirements.txt  risk_scores.csv
