[project]
name = "ai-with-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "altair>=5.5.0",
    "anthropic>=0.83.0",
    "ddgs>=9.10.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=0.36.2",
    "ipykernel>=7.2.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.1",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-prebuilt>=0.6.1",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.4.8",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "pydeck>=0.9.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "regex>=2026.2.19",
    "requests>=2.32.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.42",
    "sqlite-vec>=0.1.6",
    "streamlit>=1.47.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "typing-extensions>=4.15.0",
    "watchdog>=6.0.0",
    "xgboost>=3.2.0",
]
